--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,18 @@
-VERSION_NAME=1.2.6
-GROUP=com.github.alamkanak
+VERSION_NAME=1.2.6.f.2
+GROUP=com.github.onodude
 
-POM_DESCRIPTION=An android library to show day view, week view, 3 day view etc. in your app.
-POM_URL=https://github.com/alamkanak/Android-Week-View
-POM_SCM_URL=https://github.com/alamkanak/Android-Week-View
-POM_SCM_CONNECTION=scm:git@github.com/alamkanak/Android-Week-View.git
-POM_SCM_DEV_CONNECTION=scm:git@github.com:alamkanak/Android-Week-View.git
+POM_DESCRIPTION=A fork of the android library by `alamkanak` to show day view, week view, 3 day view etc. in your app.
+POM_URL=https://github.com/onodude/Android-Week-View
+POM_SCM_URL=https://github.com/onodude/Android-Week-View
+POM_SCM_CONNECTION=scm:git@github.com/onodude/Android-Week-View.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:onodude/Android-Week-View.git
 POM_LICENCE_NAME=The Apache Software License, Version 2.0
 POM_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
 POM_LICENCE_DIST=repo
-POM_DEVELOPER_ID=alamkanak
-POM_DEVELOPER_NAME=Raquib-ul-Alam (Kanak)
+POM_DEVELOPER_ID=onodude
+POM_DEVELOPER_NAME=Onur Erdemol
+
+
+
+
+
